# Quality-Toolkit

./: .gitignore  README.md  pyproject.toml
docs/: overview.md
src/quality_toolkit/: __init__.py  analysis.py  cli.py  data_loader.py  gui.py  report.py
tests/: test_analysis.py  test_data_loader.py
