[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quality-toolkit"
version = "0.1.0"
description = "Tools for exploring data quality metrics in tabular datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Quality Toolkit Maintainers" }
]
dependencies = [
  "click>=8.1",
  "openpyxl>=3.1",
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=7.4",
  "ruff>=0.4"
]

[project.scripts]
quality-toolkit = "quality_toolkit.cli:main"
quality-toolkit-gui = "quality_toolkit.gui:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "PL"]
ignore = ["B905"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
